--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "better-picker",
+  "name": "vue-awesome-picker",
   "description": "A Vue.js project",
   "version": "1.0.0",
   "author": "Fyerl <fyerl@foxmail.com>",
