--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-awesome-picker",
-  "description": "A Vue.js project",
+  "description": "Vue.js Picker Component",
   "version": "1.0.0",
   "author": "Fyerl <fyerl@foxmail.com>",
   "license": "MIT",
@@ -9,6 +9,10 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 0.0.0.0",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "lint": "eslint --ext .js,.vue src"
+  },
+  "repository": { 
+    "type": "git", 
+    "url": "https://github.com/fyerl/vue-awesome-picker"
   },
   "dependencies": {
     "better-scroll": "^1.8.1",
