--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Fyerl <fyerl@foxmail.com>",
   "license": "MIT",
   "private": false,
+  "main": "dist/vue-awesome-picker.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 0.0.0.0",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
