--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "license": "MIT",
   "private": false,
   "main": "dist/vue-awesome-picker.js",
+  "keywords": [    
+    "vue",
+    "awesome",
+    "picker",
+    "cascade",
+    "components",
+    "better-scroll"
+  ],
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 0.0.0.0",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
