--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "vue-awesome-picker",
   "short_name": "AwesomePicker",
   "display": "standalone",
-  "start_url": "/",
+  "start_url": "./",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "icons": [
