--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   },
   "dependencies": {
     "better-scroll": "^1.9.0",
-    "reset-css": "^2.2.1",
-    "vue": "^2.5.11"
+    "reset-css": "^2.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -50,9 +49,13 @@
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "vue": "^2.5.11",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
+  },
+  "peerDependencies": {
+    "vue": "^2.5.11"
   }
 }
