--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "better-scroll"
   ],
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 0.0.0.0",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "lint": "eslint --ext .js,.vue src"
   },
@@ -50,7 +50,9 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue": "^2.5.11",
+    "vue-hot-reload-api": "^2.3.4",
     "vue-loader": "^13.0.5",
+    "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
